crates/kirin-derive-interpreter/src/snapshots/kirin_derive_interpreter__stage_frame__tests__multi_stage_frame.snap
---
source: crates/kirin-derive-interpreter/src/stage_frame.rs
expression: generate(input)
---
#[automatically_derived]
impl<V, T> ::kirin_interpreter::StageFrame<Stage, V> for ToyStageFrame<V, T> {
    type Error = ::core::convert::Infallible;
    fn from_function_invocation(
        stage_info: &Stage,
        invocation: ::kirin_interpreter::FunctionInvocation<V>,
    ) -> ::core::result::Result<Self, Self::Error> {
        match stage_info {
            Stage::Source(_) => <ToyFrame<HighLevel, V, T> as ::kirin_interpreter::StageFrame<
                Stage,
                V,
            >>::from_function_invocation(stage_info, invocation)
            .map(::core::convert::Into::into),
            Stage::Lowered(_) => <ToyFrame<LowLevel, V, T> as ::kirin_interpreter::StageFrame<
                Stage,
                V,
            >>::from_function_invocation(stage_info, invocation)
            .map(::core::convert::Into::into),
        }
    }
    fn from_block(
        stage_info: &Stage,
        stage: ::kirin::ir::CompileStage,
        block: ::kirin::ir::Block,
        env: ::kirin_interpreter::EnvIndex,
        args: ::kirin::ir::Product<V>,
    ) -> ::core::result::Result<Self, Self::Error> {
        match stage_info {
            Stage::Source(_) => <ToyFrame<HighLevel, V, T> as ::kirin_interpreter::StageFrame<
                Stage,
                V,
            >>::from_block(stage_info, stage, block, env, args)
            .map(::core::convert::Into::into),
            Stage::Lowered(_) => <ToyFrame<LowLevel, V, T> as ::kirin_interpreter::StageFrame<
                Stage,
                V,
            >>::from_block(stage_info, stage, block, env, args)
            .map(::core::convert::Into::into),
        }
    }
}
